Fix: server details z-index to always be on top

--- a/chat-app-client/src/styles/Servers.css
+++ b/chat-app-client/src/styles/Servers.css
@@ -58,4 +58,5 @@
   border: 1px solid var(--accent-text);
   border-radius: 70%;
   color: var(--light-text);
+  z-index: 10;
 }
